WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132065
[iOS WebKit2] IOSurfacePool should force CA to actually garbage collect surfaces.
https://bugs.webkit.org/show_bug.cgi?id=132065
Summary
[iOS WebKit2] IOSurfacePool should force CA to actually garbage collect surfa...
Andreas Kling
Reported
2014-04-23 10:59:22 PDT
<
rdar://problem/16110687
>
Attachments
Patch
(8.12 KB, patch)
2014-04-23 11:00 PDT
,
Andreas Kling
thorton
: review+
Details
Formatted Diff
Diff
Patch
(8.06 KB, patch)
2014-04-23 11:12 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2014-04-23 11:00:07 PDT
Created
attachment 229994
[details]
Patch
Tim Horton
Comment 2
2014-04-23 11:03:58 PDT
Comment on
attachment 229994
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=229994&action=review
> Source/WebCore/platform/graphics/cg/IOSurfacePoolMac.mm:1 > +/*
this should be IOSurfacePoolCocoa, and should be in platform/graphics/Cocoa.
Andreas Kling
Comment 3
2014-04-23 11:12:21 PDT
Created
attachment 229995
[details]
Patch
WebKit Commit Bot
Comment 4
2014-04-23 11:47:43 PDT
Comment on
attachment 229995
[details]
Patch Clearing flags on attachment: 229995 Committed
r167717
: <
http://trac.webkit.org/changeset/167717
>
WebKit Commit Bot
Comment 5
2014-04-23 11:47:45 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug